php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #34453 parsing http://www.w3.org/2001/xml.xsd exception
Submitted: 2005-09-10 12:07 UTC Modified: 2005-09-28 13:26 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:0 of 1 (0.0%)
From: mobi at delfnet dot pl Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.0.5 OS: windows XP sp.2
Private report: No CVE-ID: None
 [2005-09-10 12:07 UTC] mobi at delfnet dot pl
Description:
------------
Since W3C group has changed http://www.w3.org/2001/xml.xsd schema, SOAP extension generate exception ("SOAP-ERROR: Parsing Schema: union has both 'memberTypes' attribute and subtypes") during parse this file. To reproduce this exception, the WSDL file must contain import: <import namespace="http://www.w3.org/XML/1998/namespace" schemaLocation="http://www.w3.org/2001/xml.xsd" />. 
I suppose it's major bug.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-09-10 23:03 UTC] sniper@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5-win32-latest.zip


 [2005-09-18 01:00 UTC] php-bugs at lists dot php dot net
No feedback was provided for this bug for over a week, so it is
being suspended automatically. If you are able to provide the
information that was originally requested, please do so and change
the status of the bug back to "Open".
 [2005-09-28 13:26 UTC] dmitry@php.net
Fixed in CVS HEAD, PHP_5_1 and PHP_5_0.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 15:00:01 2026 UTC