Fixed bug #34453 (parsing http://www.w3.org/2001/xml.xsd exception)